docs/static/examples/gitops/output/manifests/anemos-hello-world/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anemos-hello-world
  namespace: default
spec:
  rules:
    - host: anemos-hello-world.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: anemos-hello-world
                port:
                  number: 80
